--- a/src/PSAsync.Analyzer/Properties/Resources.resx
+++ b/src/PSAsync.Analyzer/Properties/Resources.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,16 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AnalyzerDescription" xml:space="preserve">
-    <value>Type names should be all uppercase.</value>
-    <comment>An optional longer localizable description of the diagnostic.</comment>
+  <data name="PSASYNC001_Message" xml:space="preserve">
+    <value>非同期コマンドレットで StopProcessing メソッドがオーバーライドされていません。</value>
   </data>
-  <data name="AnalyzerMessageFormat" xml:space="preserve">
-    <value>Type name '{0}' contains lowercase letters</value>
-    <comment>The format-able message the diagnostic displays.</comment>
+  <data name="PSASYNC001_Title" xml:space="preserve">
+    <value>StopProcessing のオーバーライド</value>
   </data>
-  <data name="AnalyzerTitle" xml:space="preserve">
-    <value>Type name contains lowercase letters</value>
-    <comment>The title of the diagnostic.</comment>
+  <data name="PSASYNC002_Message" xml:space="preserve">
+    <value>StopProcessing メソッドで CancelAsyncOperations メソッドが呼び出されていません。</value>
+  </data>
+  <data name="PSASYNC002_Title" xml:space="preserve">
+    <value>CancelAsyncOperations の呼び出し</value>
   </data>
 </root>
